sort.basic.comb.AlgCombSort11.scala.error
Erreur de compilation :
AlgCombSort11:4: error: type mismatch;
 found   : Unit
 required: Boolean
                {test=true; if (gap>1) {gap = (gap.asInstanceOf[Double] / 1.3).asInstanceOf[Int]; if ((gap==9)||(gap=10)) {gap=11}}; var i:Int=0;
                                                                                                                    ^